update+api+watchings+home+rating+swagger
